<?xml version="1.0"?>
<package format="2">
    <name>franka_gazebo</name>
    <version>1.0.0</version>
    <description>Integration of the Franka Work cell with objects inserted into the dynamical simulation environment Gazebo</description>
    <maintainer email="dscho15@student.sdu.dk">Daniel Toft Schøn</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>roslib</depend>
    <depend>xacro</depend>
    <depend>gazebo_ros</depend>
    <depend>geometry_msgs</depend>
    <depend>gazebo_plugins</depend>
    <depend>gazebo_dev</depend>
    <export></export>
</package>
